// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite > expect toml import to be a json object 1`] = `
"var data = {
  "pluginDir": "./plugins",
  "web": {
    "enabled": true
  },
  "logging": {
    "type": "stdout",
    "level": "info"
  }
};
export {
  data as config
};
"
`;

exports[`vite > expect toml import to be a string 1`] = `
"const config = 'pluginDir = "./plugins"\\n\\n[web]\\nenabled = true\\n\\n[logging]\\ntype = "stdout"\\nlevel = "info"\\n';
export {
  config
};
"
`;

exports[`vite > handle transforms 1`] = `
"var data = {
  "this": "transformed"
};
export {
  data as config
};
"
`;
